# TRINITY_IOT

./: .CMakeLists.txt.swp  BUILD_INFO.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
MY_WEB/SEMS/: home.html  index.html  style.css
MY_WEB/SEMS/js/: chart.js  config_firebase.js  firebase_rtdb.js  function.js  mqtt_con.js  mqtt_room.js  room_chart.js  room_function.js  room_main.js
MY_WEB/SEMS/rooms/: bedroom.html  kitchen.html  livingroom.html
SEMS/: CMakeLists.txt
SEMS/components/actuator_control/: CMakeLists.txt  device_control.c  device_control.h  fan.c  fan.h  led.c  led.h  whistle.c  whistle.h
SEMS/components/cloud_services/: CMakeLists.txt  firebase_handler.c  (+1 more)
SEMS/main/: CMakeLists.txt  device_control.c  firebase_handler.c  main.c  sensor_control.c  sensor_control.h  wifi_handler.c  wifi_handler.h
SEMS/main-1/: CMakeLists.txt  device_control.c  device_control.h  firebase_handler.c  firebase_handler.h  main.c  mqtt_handler.h  sensor_control.c
components/actuator_control/: fan_control.h
components/actuators/: CMakeLists.txt  fan.c  fan.h  led.c  whistle.c  whistle.h
components/connectivity/: CMakeLists.txt  mqtt_handler.h  wifi_manager.c  wifi_manager.h
components/mqtt_client/: CMakeLists.txt  mqtt_handler.c  mqtt_handler.h  mqtt_topics.h
components/sensor_readings/: mq135.c
components/sensors/: CMakeLists.txt  sht31.c
components/utils/: CMakeLists.txt  moving_average.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  app_config.h  idf_component.yml  main.c
(+39 files in other folders)
